# Parallel-Suffix-Array

./: .gitignore  CMakeLists.txt  README.md
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  influenza-A-out.txt  sa
human-genome/: download_genome.sh
input/correct-out/: influenza-A-out.txt
src/: Suffix.hpp  SuffixArray.hpp  main.cpp
